@@ -46,7 +46,7 @@ import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(Scope.Thread)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
-@Fork(value = 3)
+@Fork(value = 3, jvmArgs = "--enable-preview")
 public class ArenaPoolBench {
 
     @Param({"4", "16", "64", "512"})
